k8s/customers-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customers-service
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customers-service
  template:
    metadata:
      labels:
        app: customers-service
    spec:
      containers:
        - name: customers-service
          image: springcommunity/spring-petclinic-customers-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
