k8s/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
    spec:
      containers:
        - name: vets-service
          image: springcommunity/spring-petclinic-vets-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
