k8s/admin-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-server
  namespace: spring-petclinic
spec:
  selector:
    app: admin-server
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-server
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-server
  template:
    metadata:
      labels:
        app: admin-server
    spec:
      containers:
        - name: admin-server
          image: springcommunity/spring-petclinic-admin-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
