k8s/customers-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customers-service
  namespace: spring-petclinic
spec:
  selector:
    app: customers-service
  ports:
    - port: 8081
      targetPort: 8081
