k8s/genai-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genai-service
  namespace: spring-petclinic
spec:
  selector:
    app: genai-service
  ports:
    - port: 8084
      targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: genai-service
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genai-service
  template:
    metadata:
      labels:
        app: genai-service
    spec:
      containers:
        - name: genai-service
          image: 989800606347.dkr.ecr.us-east-1.amazonaws.com/petclinic/spring-petclinic-genai-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
