k8s/vets-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vets-service
  namespace: spring-petclinic
spec:
  selector:
    app: vets-service
  ports:
    - port: 8083
      targetPort: 8083
