k8s/visits-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: visits-service
  namespace: spring-petclinic
spec:
  selector:
    app: visits-service
  ports:
    - port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  namespace: spring-petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
    spec:
      containers:
        - name: visits-service
          image: springcommunity/spring-petclinic-visits-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
